test re-parsing and re-printing closures
+ bugfixes + refactors